--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "ci:e2e:server:start": "java -jar e2e.$npm_package_config_packaging --spring.profiles.active=e2e,$npm_package_config_default_environment -Dlogging.level.ROOT=OFF -Dlogging.level.org.zalando=OFF -Dlogging.level.tech.jhipster=OFF -Dlogging.level.com.mycompany.myapp=OFF -Dlogging.level.org.springframework=OFF -Dlogging.level.org.springframework.web=OFF -Dlogging.level.org.springframework.security=OFF --logging.level.org.springframework.web=ERROR",
     "ci:e2e:teardown": "npm run ci:e2e:teardown:docker",
     "ci:e2e:teardown:docker": "npm run docker:db:down --if-present && npm run docker:others:down && docker ps -a",
-    "docker:app:up": "docker-compose -f src/main/docker/app.yml up -d",
-    "docker:db:down": "docker-compose -f src/main/docker/mariadb.yml down -v",
-    "docker:db:up": "docker-compose -f src/main/docker/mariadb.yml up -d",
+    "docker:app:up": "docker compose -f src/main/docker/app.yml up -d",
+    "docker:db:down": "docker compose -f src/main/docker/mariadb.yml down -v",
+    "docker:db:up": "docker compose -f src/main/docker/mariadb.yml up -d",
     "docker:others:await": "",
     "docker:others:down": "",
     "predocker:others:up": "",
